<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".School_Schedule">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        android:id="@+id/txtLinerLayout"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/textView2"
            android:gravity="center"
            android:textColor="#921B1B"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school_time_title" />

        <TextView
            android:id="@+id/textView3"
            android:gravity="center"
            android:textColor="#2196F3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school_time_responsible" />
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:text="@string/school_time_text" />
            <EditText
                android:id="@+id/edtText"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:ems="5"
                android:autofillHints=""
                tools:targetApi="o"
                android:inputType="text"
                tools:ignore="LabelFor" />
            <Button
                android:id="@+id/btnModify"
                android:textSize="10sp"
                android:background="#8BC34A"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/school_time_editButton"
                tools:ignore="SmallSp" />
            <Button
                android:id="@+id/btnCancel"
                android:textSize="10sp"
                android:onClick="clickCancel"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="#03A9F4"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/school_time_cancelButton"
                tools:ignore="OnClick,SmallSp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/school_time_notification" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tbLayoutStudent"
            android:layout_marginTop="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:orientation="horizontal"
            android:stretchColumns="*"
            android:shrinkColumns="*">
            <TableRow
                android:id="@+id/aaaaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                tools:ignore="UselessParent">
                <Button
                    android:textSize="10sp"
                    android:id="@+id/aaaaaaa"
                    android:layout_marginTop="-7dp"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_button"
                    android:layout_height="wrap_content"
                    android:text="@string/school_time_day"
                    tools:ignore="ButtonStyle,SmallSp" />

                <Button
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_button"
                    android:layout_height="wrap_content"
                    android:text="@string/school_time_time"
                    tools:ignore="ButtonStyle,SmallSp" />

                <Button
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_button"
                    android:layout_height="wrap_content"
                    android:text="@string/school_time_monday"
                    tools:ignore="ButtonStyle,SmallSp" />

                <Button
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_button"
                    android:layout_height="wrap_content"
                    android:text="@string/school_time_tuesday"
                    tools:ignore="ButtonStyle,SmallSp" />
                <Button
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_button"
                    android:layout_height="wrap_content"
                    android:text="@string/school_time_wednesday"
                    tools:ignore="ButtonStyle,SmallSp" />
                <Button
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_button"
                    android:layout_height="wrap_content"
                    android:text="@string/school_time_thursday"
                    tools:ignore="ButtonStyle,SmallSp" />
                <Button
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_button"
                    android:layout_height="wrap_content"
                    android:text="@string/school_time_friday"
                    tools:ignore="ButtonStyle,SmallSp" />

            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>