<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtListStudent"
        android:text="@string/show_list_student_title"
        android:textColor="#009688"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@+id/txtListStudent"
        android:text="--------------------------------------------------------------------------------------------------------------"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/tb_student"
        android:layout_below="@+id/txtListStudent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:weightSum="12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_student_id"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_student_name"
            android:layout_weight="5"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_student_age"
            android:layout_weight="1"
            android:paddingStart="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_student_sex"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/list_student_telephone"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvShowStudent"
        android:layout_width="401dp"
        android:layout_height="624dp"
        android:layout_below="@+id/tb_student"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="17dp">
    </ListView>
</RelativeLayout>