<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchStudent">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_student_title"
            android:textSize="20sp"
            android:textColor="#0F7ACF"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="16dp"
            />

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:hint="@string/add_student_name"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="46dp"
            tools:ignore="Autofill" />
        <RelativeLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-2dp"
                android:layout_marginRight="-2dp"
                android:layout_toStartOf="@+id/btnSearch"
                android:layout_toLeftOf="@+id/btnSearch"
                app:srcCompat="@android:drawable/ic_menu_search"
                tools:layout_editor_absoluteX="6dp"
                tools:layout_editor_absoluteY="127dp"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/search_student_search"
                tools:layout_editor_absoluteX="279dp"
                tools:layout_editor_absoluteY="43dp" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/txtDisplay"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="12"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="ID"
                android:layout_weight="1"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Name"
                android:layout_weight="5"
                android:paddingLeft="5dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Age"
                android:layout_weight="1"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Sex"
                android:layout_weight="2"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Telephone"
                android:layout_weight="3"
                android:paddingLeft="5dp"/>

        </LinearLayout>
        <ListView
            android:id="@+id/lvStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>